--- a/Mi-p{agina-web/index.html
+++ b/Mi-p{agina-web/index.html
@@ -2,92 +2,121 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mi página web en bootstrap</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>UrbanWalk - Almacén de Calzado Original</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <header>
+  <!-- Navegación -->
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">UrbanWalk</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="menu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Encabezado -->
+  <header class="text-center p-4">
     <h1>UrbanWalk - Almacén de Calzado Original</h1>
-    <h2>Tu estilo en cada paso</h2>
-    <p>
-      En <strong>UrbanWalk</strong> ofrecemos calzado de alta calidad para toda la familia.
-      <em>Comodidad y estilo</em> para cada paso que das.
-    </p>
-    <img src="Zapato.jpg" alt="Zapato moderno" width="300">
+    <p class="lead">Tu estilo en cada paso</p>
   </header>
 
-  <main>
-    <section id="productos">
-      <h3>Nuestros Productos</h3>
-      <ul>
-        <li>Zapatos deportivos</li>
-        <li>Sandalias urbanas</li>
-        <li>Botines de cuero</li>
-        <li>Zapatos casuales</li>
-      </ul>
+  <!-- Sección Principal -->
+  <main class="container my-4">
+    <p>En UrbanWalk ofrecemos calzado de alta calidad para toda la familia. Comodidad y estilo para cada paso que das.</p>
 
-      <h3>Video Promocional</h3>
-      <video src="Video de Zapatos.mp4" width="640" height="360" controls></video>
-      
+    <div class="row">
+      <div class="col-md-4 mb-3">
+        <div class="card">
+          <img src="assents/img/Zapato.Moderno.jpg" class="Zapato Moderno">
+          <div class="card-body">
+            <h3 class="card-title">Zapato Moderno</h3>
+            <p class="card-text">Nuestros Productos</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="card">
+          <img src="assents/img/Zapato.deportivo.avif" class="Zapato Deportivo">
+          <div class="card-body">
+            <h3 class="card-title">Zapatos Deportivos</h3>
+            <p class="card-text">Sandalias urbanas, Botines de cuero, Zapatos casuales</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 mb-3">
+        <div class="card">
+          <img src="assents/img/Zapatillas.deportivas.webp" class="Zapatillas Deportivas">
+          <div class="card-body">
+            <h3 class="card-title">Video Promocional</h3>
+            <p class="card-text">Compra Fácil: Escoge tu modelo, selecciona tu talla, recibe en casa.</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-      <h3>Compra Fácil</h3>
-      <ol>
-        <li>Escoge tu modelo</li>
-        <li>Selecciona tu talla</li>
-        <li>Recibe en casa</li>
-      </ol>
-    </section>
-
-    <section>
-      <h3>Tabla de Precios</h3>
-      <table border="1">
-        <thead>
-          <tr>
-            <th>Modelo</th>
-            <th>Precio</th>
-            <th>Talla</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Air Max</td>
-            <td>$89.99</td>
-            <td>38 - 42</td>
-          </tr>
-          <tr>
-            <td>Adidas</td>
-            <td>$109.99</td>
-            <td>38 - 44</td>
-          </tr>
-          <tr>
-            <td>New Balance</td>
-            <td>$74.99</td>
-            <td>40 - 42</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-    <section>
-      <h3>Contáctanos</h3>
-      <form action="#" method="post">
-        <label for="nombre">Nombre:</label><br>
-        <input type="text" id="nombre" name="nombre" required><br><br>
-
-        <label for="correo">Correo electrónico:</label><br>
-        <input type="email" id="correo" name="correo" required><br><br>
-
-        <button type="submit">Enviar</button>
-      </form>
-    </section>
+    <!-- Collapse -->
+    <p>
+      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#precios">
+        Ver Tabla de Precios
+      </button>
+    </p>
+    <div class="collapse" id="precios">
+      <div class="card card-body">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Modelo</th>
+              <th>Precio</th>
+              <th>Talla</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><td>Panama Jack Gadner</td><td>$8.99</td><td>38 - 42</td></tr>
+            <tr><td>Adidas</td><td>$25.99</td><td>38 - 44</td></tr>
+            <tr><td>New Balance</td><td>$74.99</td><td>40 - 42</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </main>
 
-  <footer>
-    <p>© 2025 UrbanWalk - Todos los derechos reservados</p>
+  <!-- Formulario -->
+  <section class="container my-5">
+    <h2>Contáctanos</h2>
+    <form>
+      <div class="mb-3 form-group">
+        <label for="nombre" class="form-label">Nombre:</label>
+        <input type="text" class="form-control" id="nombre">
+      </div>
+      <div class="mb-3 form-group">
+        <label for="email" class="form-label">Correo electrónico:</label>
+        <input type="email" class="form-control" id="email">
+      </div>
+      <div class="mb-3 form-group">
+        <label for="comentarios" class="form-label">Comentarios:</label>
+        <textarea class="form-control" rows="4"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
+  </section>
+
+  <!-- Pie de página -->
+  <footer class="bg-light text-center py-3">
+    <p>&copy; 2025 UrbanWalk - Todos los derechos reservados</p>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
